[tool.poetry]
name = "capital_spending"
version = "0.1.0"
description = ""
authors = ["sptkl <caobaiyue@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = {version = "^3.7.4", extras = ["speedups"]} 
xmltodict = "^0.12.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
